[gd_scene load_steps=11 format=2]

[ext_resource path="res://Sprites/Pawns/Pawn_09/Pawn_09_Part_Arm.png" type="Texture" id=1]
[ext_resource path="res://Sprites/Pawns/Pawn_13/Pawn_13_Part_Legs_Back.png" type="Texture" id=2]
[ext_resource path="res://Sprites/Pawns/Pawn_13/Pawn_13_Part_Body.png" type="Texture" id=3]
[ext_resource path="res://Sprites/Pawns/Pawn_13/Pawn_13_Part_Head.png" type="Texture" id=4]
[ext_resource path="res://Sprites/Pawns/Pawn_13/Pawn_13_Part_Legs_Body.png" type="Texture" id=5]
[ext_resource path="res://Sprites/Pawns/Pawn_13/Pawn_13_Part_Face_01.png" type="Texture" id=6]
[ext_resource path="res://Sprites/Pawns/Pawn_13/Pawn_13_Part_Face_02.png" type="Texture" id=7]
[ext_resource path="res://Sprites/Pawns/Pawn_13/Pawn_13_Part_Legs_Front.png" type="Texture" id=8]
[ext_resource path="res://Scripts/Pawns/Pawn_13_Parts/Pawn_13_Pic.gd" type="Script" id=9]

[sub_resource type="Animation" id=1]
resource_name = "Idle"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite_Body/Sprite_H_Body/Sprite_Legs_B:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 26, 27, 26 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite_Body/Sprite_Head:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite_Body/Sprite_Head:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.7 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, -16 ), Vector2( 0, -17 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Sprite_Body/Sprite_Arm:rotation_degrees")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 53.6, 59.6 ]
}

[node name="Pawn_13_Pic" type="Node2D"]
script = ExtResource( 9 )

[node name="Sprite_Body" type="Sprite" parent="."]
position = Vector2( 8, -7 )
texture = ExtResource( 3 )
hframes = 2

[node name="Sprite_Arm" type="Sprite" parent="Sprite_Body"]
position = Vector2( 0, -4 )
rotation = 1.03826
texture = ExtResource( 1 )
offset = Vector2( 12, 4 )
hframes = 3
frame = 2

[node name="Sprite_H_Body" type="Sprite" parent="Sprite_Body"]
position = Vector2( -8, 5 )
texture = ExtResource( 5 )
hframes = 29

[node name="Sprite_Legs_F" type="Sprite" parent="Sprite_Body/Sprite_H_Body"]
texture = ExtResource( 8 )
hframes = 34
frame = 26

[node name="Sprite_Legs_B" type="Sprite" parent="Sprite_Body/Sprite_H_Body"]
show_behind_parent = true
position = Vector2( 0, -1 )
texture = ExtResource( 2 )
hframes = 34
frame = 27

[node name="Sprite_Head" type="Sprite" parent="Sprite_Body"]
position = Vector2( 0, -16.7276 )
texture = ExtResource( 4 )

[node name="Sprite_Face_B" type="Sprite" parent="Sprite_Body/Sprite_Head"]
texture = ExtResource( 7 )

[node name="Sprite_Face" type="Sprite" parent="Sprite_Body/Sprite_Head"]
texture = ExtResource( 6 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Idle = SubResource( 1 )
